<resources>
    <string name="readSMSPermission">Please allow Polking to read SMS</string>
    <string name="contactPermission">Please allow Polking to read your Contact Details</string>
    <string name="readStoragePermission">Please allow Polking to read storage</string>
    <string name="writeStoragePermission">Please allow Polking to write to storage</string>
    <string name="app_name">Polking</string>
    <string name="detect_my_location">Detect My Location</string>
    <string name="set_location">Set Location</string>
    <string name="manually">Manually</string>
    <string name="sign_in">Sign In</string>
    <string name="backspace">Backspace</string>
    <string name="phone_number">Phone Number…</string>
    <string name="google_sign_in">Sign In With Google</string>
    <string name="continue_txt">Continue</string>
    <string name="imagedescription">imageDescription</string>
    <string name="or">Or</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="otp_hint">1</string>
    <string name="welcome_home">Welcome Home, User</string>
    <string name="home">Home</string>
    <string name="ok_string">Fine</string>
    <string name="cancel_string">Nope</string>
    <string name="back">Back</string>
    <string name="welcome_string">Good Morning, Rachel Green. Welcome to POLKING.</string>
    <string name="zero_string">0</string>
    <string name="questions">Questions</string>
    <string name="or_string">|</string>
    <string name="friends">Friends</string>
    <string name="best_friends">Best Friends</string>
    <string name="more_coming_soon">More Coming Soon</string>
    <string name="options">Options</string>
    <string name="about_us">About Us</string>
    <string name="faqs">FAQs</string>
    <string name="review_polking">Review Polking</string>
    <string name="see_your_best_friends">See Your Best Friends</string>
    <string name="see_your_friends">See Your Friends</string>
    <string name="see_your_questions">See Your Questions</string>
    <string name="can_t_close_this">Can\'t Close This</string>
    <string name="choose_a_profile_picture">Choose A Profile Picture</string>
    <string name="what_s_your_name">What\'s Your Name?</string>
    <string name="what_s_your_birthday">What\'s Your Birthday? DD/MM/YYYY</string>
    <string name="what_s_your_gender">What\'s Your gender?</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="other">OTHER</string>
    <string name="save">Save</string>
    <string name="permission_not_granted">Unable to enable permissions. Please give permission manually to add profile
        image. Profile Image is a must
    </string>
    <string name="not_uploaded">Uploading Details was Cancelled somehow. Was that you?</string>
    <string name="something_went_wrong">Something Went Wrong.</string>
    <string name="save_properly">Your details where saved properly.</string>
    <string name="select_gender">Please Select A Gender.</string>
    <string name="above_thirteen_msg">To Use This App You Must Be 13+. Sorry.</string>
    <string name="enter_birthdate">Please Enter Your Birthdate.</string>
    <string name="name_length_restriction">Your Name Must Be Greater Than 3 Characters.</string>
    <string name="select_picture">Something went wrong. Please select your profile picture again.</string>
    <string name="user_not_found">User not found. Please kill the application and try again. Sorry for inconvenience.
    </string>
    <string name="getting_details">Getting Details was Cancelled somehow. Was that you?</string>
    <string name="check_permission">Unable To Start. Check Permission. Please.</string>
    <string name="profilebottomsheet">ProfileEditBtmSheet onCreateView</string>
    <string name="otherprofiledetailsbottomsheet">OtherProfileOptions onCreateView</string>
    <string name="create">Create</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="went_wrong_image">Something Went Wrong While Getting Image. Please Try Again.</string>
    <string name="something_went_wring_oops">Oops Something Went Wrong. Please Try Again.</string>
    <string name="enter_valid_phone">Enter a valid phone number. This is the lest you can do for us.</string>
    <string name="invalid_creds">Invalid Credential. Please Try Again.</string>
    <string name="too_many_req">To many request. Please Try Again.</string>
    <string name="time_out">TimeOut. Please Try Again.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="loading_image_cancel">Loading Background Image was cancelled somehow. Was that you?</string>
    <string name="not_found_bg">Background Image Not Found. Select Another One.</string>
    <string name="enter_your_question">Enter Your Question</string>
    <string name="recent">RECENT</string>
    <string name="post">Post</string>
    <string name="not_uploaded_question">Uploading Question was Somehow Cancelled. Was that you?</string>
    <string name="search">Search</string>
    <string name="top_questions">Top Questions</string>
    <string name="questions_and_response">Questions and Response</string>
    <string name="friends_and_best_friends">Friends And Best Friends</string>
    <string name="block_and_report">Block and Report</string>
    <string name="not_found">Didn\'t Find Your Question? Add Here. We Will Reach You Shortly.</string>
    <string name="close">Close</string>
    <string name="select_a_category">Select A Category</string>
    <string name="select_category">Select Anyone categories. Its compulsory.</string>
    <string name="ask_doubt">Enter your doubt related to application.</string>
    <string name="ask_something">ASK SOMETHING</string>
    <string name="how_to">How To? / Why To?</string>
    <string name="friends_txt">Friends?</string>
    <string name="block_report">Block / Report</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="thankyou_txt">Thank You For Your Feedback. We Are Glad That You Like It.</string>
    <string name="nofeedback_txt">Thank you for your feedback. We will make the answers more understandable.</string>
    <string name="was_it_helpful">Was it helpful?</string>
    <string name="search_here">Search Here</string>
    <string name="about_us_txt">Hello Polking\'s Member. We, the creators of Polking, welcome you to our Polking Family. We hope you are having a great day. And this application is helping you in your daily life. This is not a high end application with ML/AI integration. Just a normal application with normal usage. You ask normal question, People will give normal answer (Yes 👍/ No 👎). No other way. So no lectures. No knowledge. Just a Head and Tail situation. In between we also play a part of seeing the questions asked. So that it doesn\'t make a Chaos between the family ☹️. So as a family member you also need to see this. Enjoy your life because it\'s short with this short application. 🥰😍😘.  And yeah. One more thing. Please add your review on the Play Store, if you have time.  And one more 😅, please share this application to others also. And make our family big. Because more the better. 🥺😉.
    </string>
    <string name="smiley">😍</string>
    <string name="thumbs_up">👍</string>
    <string name="thumbs_down">👎</string>
    <string name="reviewbottomsheet">ReviewBottomSheet onCreateView</string>
    <string name="faqbottomsheet">Ask FAQs Btm Sheet onCreateView</string>
    <string name="questionbottomsheet">Question Details Btm Sheet onCreateView</string>
    <string name="give_us_your_feedback_and_we_will_make_sure_we_will_change_if_not_we_will_bring_something_new_but_change_will_happen">
        Need Your Help To Make Polking A Poling King.
    </string>
    <string name="very_bad_uninstalling_if_you_didn_t_change_this">Very Bad
    </string>
    <string name="not_so_good_please_fix_this">Not So Good</string>
    <string name="some_thins_need_to_be_change">Good</string>
    <string name="good_application">Very Good</string>
    <string name="very_good_everything_is_working_fine">Best</string>
    <string name="say_what_you_didn_t_like_in_brief">Say What You Didn\'t Like In Brief:</string>
    <string name="write_here">Write Here…</string>
    <string name="its_making_us_sad">It\'s Making Us Sad That You Didn\'t Like Our Application. Please Tell Us And We
        Will Make The Changes As Soon As Possible.
    </string>
    <string name="its_sad">Tell Us What You Want To Change And We Will Make Those Changes.</string>
    <string name="tell_us">Tell Us What You Need Us To Change. We Will Give That A Look.</string>
    <string name="thanks">Thanks For Liking Our Application. Any Suggestion?</string>
    <string name="very_much_thanks">Thank You Very Much. But I Think You Are Being Modest. Tell us What Changes You
        Required. Please.
    </string>
    <string name="yes_question">Yes?</string>
    <string name="no_question">No?</string>
    <string name="dont_support">Please LogIn To Give Your Vote. Because We Do Not Support Anonymous Voting Now.</string>
    <string name="we_dont_work_that_way">This Application Helps You To Know What Others Think About Your Idea. Not What
        You Think About Your Own Thinking. So Sorry We Don\'t Work That Way. Sorry.
    </string>
    <string name="inable_to_vote">Unable To Process Your Vote At The Moment. Please Try Again.</string>
    <string name="that_embarrassing">Something Went Wrong. Unable To Find Question Data. That\'s Embarrassing</string>
    <string name="you_agree">You Agree. Nice!</string>
    <string name="you_disagree">You Disagree! Wow!</string>
    <string name="add_as_friend">Friend?</string>
    <string name="is_a_friend">Friend</string>
    <string name="add_as_bestfriend">Best Friend?</string>
    <string name="is_a_bestfrined">Best Friend</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="see_complete_details">See Complete Details</string>
    <string name="follow_as_a_friend">Follow As A Friend</string>
    <string name="report_this_user">Report</string>
    <string name="block_this_user">Block</string>
    <string name="following_as_a_friend">Following As A Friend</string>
    <string name="unfollow_as_a_friend">Unfriend</string>
    <string name="you_have_got">You have got</string>
    <string name="notificationbottomsheet">Notification Bottom Sheet onCreate</string>
    <string name="notifications_for_you">Notifications For You</string>
    <string name="alerts">Alerts</string>
    <string name="first_friend_then_best_friend">First Friend Then Best Friend</string>
    <string name="something_new">Something New</string>
    <string name="notification_info">(You Can Swipe Up In The Profile Page To Open The Notifications)</string>
    <string name="see_stats">See Stats</string>
    <string name="please_login">Please Login</string>
    <string name="retry">Retry</string>
    <string name="total_votes">Total Votes</string>
    <string name="people_who_think_ike_you">People Who Thinks Like You</string>
    <string name="voted_yes">YOU VOTED YES</string>
    <string name="voted_no">YOU VOTED NO</string>
    <string name="voted_yes_for_your_question">People Who Voted Yes</string>
    <string name="voted_no_for_your_question">People Who Voted No</string>
    <string name="your_quesitons">YOUR QUESTION STATISTICS</string>
    <string name="adding_soon">Adding Soon</string>
    <string name="share">Share Poliking</string>
    <string name="unable_to_generate_link">Unable to generate share link. Please try again.</string>
    <string name="link_play_store">https://play.google.com/store/apps/details?id=com.project.pradyotprakash.polking</string>
    <string name="review_on_play_store">Review On Play Store</string>
    <string name="no_friend">You don\'t have any friend right now</string>
</resources>