<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">

    <com.google.android.material.chip.Chip
            android:id="@+id/back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/close"
            android:textColor="@color/white"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:chipBackgroundColor="@color/disagree_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/disagree_color" />

    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/back_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_tv"
            app:layout_constraintTop_toTopOf="@+id/back_tv" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/top_round_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_tv">

        <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.2"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_about"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/muli_semi_bold"
                android:text="@string/give_us_your_feedback_and_we_will_make_sure_we_will_change_if_not_we_will_bring_something_new_but_change_will_happen"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:clipToPadding="false"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

            <com.google.android.material.chip.Chip
                    android:id="@+id/feedback0_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_semi_bold"
                    android:text="@string/very_bad_uninstalling_if_you_didn_t_change_this"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    app:rippleColor="@color/disagree_color" />

            <com.google.android.material.chip.Chip
                    android:id="@+id/feedback1_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/muli_semi_bold"
                    android:text="@string/not_so_good_please_fix_this"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    app:rippleColor="@color/disagree_color" />

            <com.google.android.material.chip.Chip
                    android:id="@+id/feedback2_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/muli_semi_bold"
                    android:text="@string/some_thins_need_to_be_change"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    app:rippleColor="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                    android:id="@+id/feedback3_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/muli_semi_bold"
                    android:text="@string/good_application"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    app:rippleColor="@color/colorPrimaryDark" />

            <com.google.android.material.chip.Chip
                    android:id="@+id/feedback4_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/muli_semi_bold"
                    android:text="@string/very_good_everything_is_working_fine"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    app:rippleColor="@color/agree_color" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
                android:id="@+id/val_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/muli_bold"
                android:text="@string/say_what_you_didn_t_like_in_brief"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

        <EditText
                android:id="@+id/addFeed_et3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/white_round_borders"
                android:elevation="3dp"
                android:ems="10"
                android:focusable="auto"
                android:fontFamily="@font/muli_light"
                android:hint="@string/write_here"
                android:inputType="textMultiLine"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/post_Tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/val_tv" />

        <com.google.android.material.chip.Chip
                android:id="@+id/post_Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/muli_bold"
                android:text="@string/post"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:theme="@style/Theme.MaterialComponents.Light"
                android:visibility="gone"
                app:chipBackgroundColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/addFeed_et3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/addFeed_et3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>