<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="wrap_content">

    <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/top_round_appcolor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/view5"/>

    <TextView
            android:text="@string/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view5"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/muli"/>

    <TextView
            android:text="@string/select_a_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/mainProgressBar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
            android:textColor="@color/black" android:textSize="18sp" android:fontFamily="@font/muli_bold"
            android:layout_marginTop="15dp"/>
    <RadioGroup
            android:id="@+id/types_rg"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp" android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="20dp" android:layout_marginEnd="20dp">

        <RadioButton
                android:text="@string/questions_and_response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/optionOne_Cb"
                app:layout_constraintTop_toBottomOf="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black" android:textSize="16sp" android:fontFamily="@font/muli_semi_bold"/>
        <RadioButton
                android:text="@string/friends_and_best_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/optionTwo_Cb"
                app:layout_constraintStart_toStartOf="@+id/optionOne_Cb"
                app:layout_constraintTop_toBottomOf="@+id/optionOne_Cb"
                android:layout_marginTop="15dp" android:textSize="16sp" android:textColor="@color/black"
                android:fontFamily="@font/muli_semi_bold"/>
        <RadioButton
                android:text="@string/block_and_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/optionThree_Cb"
                android:textSize="16sp" android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/optionTwo_Cb"
                app:layout_constraintStart_toStartOf="@+id/optionTwo_Cb" android:layout_marginTop="15dp"
                android:fontFamily="@font/muli_semi_bold"/>

    </RadioGroup>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:background="@drawable/white_round_borders"
            android:elevation="3dp"
            android:id="@+id/addQuestion_et"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:focusable="auto"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:hint="@string/enter_your_question"
            android:textSize="12sp"
            android:fontFamily="@font/muli_light"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/types_rg" android:layout_marginTop="20dp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:background="@drawable/white_round_borders"
            android:elevation="3dp"
            android:id="@+id/addFeed_et3"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:focusable="auto"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:hint="@string/enter_your_question"
            android:textSize="12sp"
            android:fontFamily="@font/muli_light"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addQuestion_et" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveTv"
            android:background="@drawable/appcolor_background"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="70dp"
            android:paddingTop="7dp"
            android:paddingRight="70dp"
            android:paddingBottom="7dp"
            app:fontFamily="@font/muli_bold"
            android:textColor="@color/white"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/addFeed_et3"/>

    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mainProgressBar"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:indeterminateTint="@color/colorAccent"
            android:visibility="gone" app:layout_constraintTop_toBottomOf="@+id/view5"/>

</androidx.constraintlayout.widget.ConstraintLayout>