<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="5dp"
                                        android:layout_marginLeft="5dp" android:layout_marginStart="5dp"
                                        android:layout_marginRight="5dp" android:layout_marginEnd="5dp"
                                        android:layout_marginBottom="5dp" app:cardCornerRadius="10dp"
                                        app:cardElevation="3dp">

        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:contentDescription="@string/imagedescription"
                    android:src="@drawable/ic_default_appcolor"
                    android:id="@+id/bg_iv"
                    android:tint="@color/colorPrimary"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/username_tv"
                    app:layout_constraintStart_toEndOf="@+id/bg_iv" android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintTop_toTopOf="@+id/bg_iv" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="20dp" android:layout_marginRight="20dp" android:textSize="18sp"
                    android:textColor="@color/black" android:fontFamily="@font/muli"
                    app:layout_constraintBottom_toBottomOf="@+id/bg_iv"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/question_tv"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/bg_iv" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp" android:textSize="20sp" android:textColor="@color/black"
                    android:fontFamily="@font/muli_bold"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/votes_tv"
                    app:layout_constraintTop_toBottomOf="@+id/question_tv" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp" android:layout_marginTop="20dp" android:textSize="14sp"
                    android:textColor="@color/black" android:fontFamily="@font/muli_light"
            />
            <TextView
                    android:text="@string/yes_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/yes_tv"
                    app:layout_constraintTop_toBottomOf="@+id/votes_tv"
                    app:layout_constraintStart_toStartOf="@+id/votes_tv"
                    android:layout_marginTop="20dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="20dp" android:textSize="18sp"
                    android:textColor="@android:color/holo_green_dark" android:fontFamily="@font/muli_bold"/>
            <TextView
                    android:text="@string/no_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/no_tv"
                    app:layout_constraintEnd_toEndOf="@+id/votes_tv"
                    app:layout_constraintTop_toBottomOf="@+id/votes_tv" android:layout_marginTop="20dp"
                    android:textSize="18sp" android:textColor="@android:color/holo_red_dark"
                    android:fontFamily="@font/muli_bold"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>